--- a/social_network/chats/templates/chat/chat.html
+++ b/social_network/chats/templates/chat/chat.html
@@ -25,10 +25,10 @@
                     <img src="{% static 'images/seacrh.png' %}" class = "search-image icon-image" alt="">
                     <input type="text" class = "seacrh-input" placeholder="Пошук">
                 </div>
-                <div class = "people-contacts">
+                <div class = "people-contacts" >
                     {% for friend in friends %}
                         {% if friend.profile1 == current_user %}
-                            <div class = "contact">
+                            <a class = "contact" href = "{% url 'create_chat' friend.profile2.pk %}">
                                 {% for avatar in all_avatars %}
                                     {% if avatar.image %}
                                         {% if avatar.profile == current_user %}
@@ -38,21 +38,21 @@
                                         <img class = "post-friend-avatar" src="{% static 'images/icons/account.png'%}" alt="">
                                     {% endif%}
                                 {% endfor %}
-                                <span class = "people-name">{{ friend.user.first_name }} asdaads{{ friend.user.last_name }}</span>
-                            </div>
+                                <span class = "people-name">{{ friend.profile1.user.first_name }} {{ friend.profile1.user.last_name }}</span>
+                            </a>
                         {% elif friend.profile2 == current_user %}
-                            <div class = "contact">
+                            <a class = "contact" href = "{% url 'create_chat' friend.profile1.pk  %}">
                                 {% for avatar in all_avatars %}
                                     {% if avatar.image %}
-                                        {% if avatar.profile == post.author%}
+                                        {% if avatar.profile == current_user %}
                                             <img class = "post-friend-avatar" src="{{ avatar.image.url }}" alt="">                                              
                                         {% endif  %}
                                     {% else %}
                                         <img class = "post-friend-avatar" src="{% static 'images/icons/account.png'%}" alt="">
                                     {% endif%}
                                 {% endfor %}
-                                <span class = "people-name">{{ friend.user.first_name }} asdasd{{ friend.user.last_name }}</span>
-                            </div>
+                                <span class = "people-name">{{ friend.profile2.user.first_name }} {{ friend.profile2.user.last_name }}</span>
+                            </a>
                         {% endif%}
                     {% endfor %}
                 </div>
@@ -62,22 +62,47 @@
             <div class = "chat">
                 <div class = "chat-hat">
                     <div class = "name-and-avatar-group">
-                        <img class = "arrow-image small-image" src="{% static 'images/arrow.png' %}" alt="">
+                        <a class = "arrow-image small-image" href = "{% url 'all_chats'%}" alt="">
+                            <img class = "arrow-image small-image" src="{% static 'images/arrow.png' %}" alt="">
+                        </a>
                         <div class = "information-group">
                             <img class = "avatar" src="{% static 'images/group_avatar.png' %}" alt="">
                             <div class = 'name-group'>
                                 <input type="hidden" value = "{{ chat_group.pk }}" id = "chatGroupId">
+                                <input type="hidden" value="{{ request.user.username }}">
                                 <h1 class = 'name'>{{chat_group.name}}</h1>
-                                <h2 class = "members">{{ chat_group.members.all | length}} учасників, 1 в мережі</h2>
+                                {% if chat_group.is_personal_chat == False %}
+                                    <h2 class = "members">{{ chat_group.members.all | length}} учасників, 1 в мережі</h2>
+                                {% elif chat_group.is_personal_chat == True %}
+                                    <h2 class = "members">{{ chat_group.members.all | length}} учасники, 1 в мережі</h2>
+                                {% endif %}
                             </div>
                         </div>
                     </div>
                     <img class = "dots small-image" src="{% static 'images/dots.png'%}" alt="">
                 </div>
                 <div class = "message-and-input">
-                    <div id = "messages">
-
+                    <div id = "messages" class="messages-class">
+                        <!-- <div class="date-create-chat-div">
+                            <p class="date-create-chat-text">date</p>
+                        </div> -->
+                        {% for message in messages %}
+                            {% if message.author == current_user %}
+                                <div class = "one-message author-me">
+                                    <p class = "message-content">{{ message.content}}</p>
+                                    <p class = "message-time">{{ message.sent_at|date:'c'}}</p>
+                                </div>
+                            {% elif message.author != current_user %}
+                                <div class = "one-message author-people">
+                                    <p class = "message-author">{{ message.author }}</p>
+                                    <p class = "message-content">{{ message.content}}</p>
+                                    <p class = "message-time">{{ message.sent_at|date:'c'}}</p>
+                                </div>
+                            {% endif %}
+                            
+                        {% endfor%}
                     </div> 
+                    
                     <div class = "input-div"> 
                         <form method="post" class = "input-form" id = "form">
                             {{ form }}
@@ -112,63 +137,28 @@
                     </div>  
                 </div>
                 <div class = "body-frame">
-                    <div class = "one-people">
-                        <div class = "people-information">
-                            <div class = icon-people>
-                                <img  class = "icon-people"src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
-                            </div>
-                            <div class = "people-name-and-message">
-                                <div class = "people-name-and-time">
-                                    <h3 class = "friend-name">Mona Lisa</h3>
-                                    <h3 class = "time">09:41</h3>
-                                </div>
-                                <h4 class = message-friend>Привіт! Як справи?</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class = "one-people">
-                        <div class = "people-information">
-                            <div class = icon-people>
-                                <img  class = "icon-people"src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
-                            </div>
-                            <div class = "people-name-and-message">
-                                <div class = "people-name-and-time">
-                                    <h3 class = "friend-name">Mona Lisa</h3>
-                                    <h3 class = "time">09:41</h3>
-                                </div>
-                                <h4 class = message-friend>Привіт! Як справи?</h4>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class = "one-people">
-                        <div class = "people-information">
-                            <div class = icon-people>
-                                <img  class = "icon-people"src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
-                            </div>
-                            <div class = "people-name-and-message">
-                                <div class = "people-name-and-time">
-                                    <h3 class = "friend-name">Mona Lisa</h3>
-                                    <h3 class = "time">09:41</h3>
-                                </div>
-                                <h4 class = message-friend>Привіт! Як справи?</h4>
-                            </div>
-                        </div>
-                    </div>
-                    <div class = "one-people">
-                        <div class = "people-information">
-                            <div class = icon-people>
-                                <img class = "icon-people" src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
-                            </div>
-                            <div class = "people-name-and-message">
-                                <div class = "people-name-and-time">
-                                    <h3 class = "friend-name">Mona Lisa</h3>
-                                    <h3 class = "time">09:41</h3>
-                                </div>
-                                <h4 class = message-friend>Привіт! Як справи?</h4>
-                            </div>
-                        </div>
-                    </div>
+                    {% for group in all_groups %}
+                        {% if group.is_personal_chat == True%}
+                            {% for member in group.members.all %}
+                                {% if member == current_user %}
+                                    <div class = "one-people">
+                                        <div class = "people-information">
+                                            <div class = icon-people>
+                                                <img  class = "icon-people"src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
+                                            </div>
+                                            <a class = "people-name-and-message" href = "{% url 'chat' group.pk %}">
+                                                <div class = "people-name-and-time">
+                                                    <h3 class = "friend-name">{{group.name}}</h3>
+                                                    <h3 class = "time">09:41</h3>
+                                                </div>
+                                                <h4 class = message-friend>Привіт! Як справи?</h4>
+                                            </a>
+                                        </div>
+                                    </div>
+                                {% endif%}
+                            {% endfor %}
+                        {% endif%}
+                    {% endfor %}
                 </div>
             </div>
             <div class = "frame message">
@@ -186,24 +176,26 @@
                 <div class = "body-frame">
                     
                     {% for group in all_groups %}
-                        {% for member in group.members.all %}
-                            {% if member == current_user %}
-                                <div class = "one-people">
-                                    <div class = "people-information">
-                                        <div class = icon-people>
-                                            <img  class = "icon-people"src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
+                        {% if group.is_personal_chat == False%}
+                            {% for member in group.members.all %}
+                                {% if member == current_user %}
+                                    <div class = "one-people">
+                                        <div class = "people-information">
+                                            <div class = icon-people>
+                                                <img  class = "icon-people"src="{% static 'images/icons/friend-avatar2.png'%}" alt="">
+                                            </div>
+                                                    <a class = "people-name-and-message" href = "{% url 'chat' group.pk %}">
+                                                        <div class = "people-name-and-time">
+                                                            <h3 class = "friend-name">{{group.name}}</h3>
+                                                            <h3 class = "time">09:41</h3>
+                                                        </div>
+                                                        <h4 class = message-friend>Привіт! Як справи?</h4>
+                                                    </a>
                                         </div>
-                                                <a class = "people-name-and-message" href = "{% url 'chat' group.pk %}">
-                                                    <div class = "people-name-and-time">
-                                                        <h3 class = "friend-name">{{group.name}}</h3>
-                                                        <h3 class = "time">09:41</h3>
-                                                    </div>
-                                                    <h4 class = message-friend>Привіт! Як справи?</h4>
-                                                </a>
                                     </div>
-                                </div>
-                            {% endif%}
-                        {% endfor%}
+                                {% endif%}
+                            {% endfor %}
+                        {% endif%}
                     {% endfor %}
                 </div>
             </div>
