--- a/social_network/chats/static/css/chat/chat.css
+++ b/social_network/chats/static/css/chat/chat.css
@@ -5,15 +5,16 @@
     height: calc(24vw + 35.5vh);
     width: calc(19.6vw + 27.6vh);
     padding: calc(0.6vw + 0.8vh);
-    max-height: calc(29vw + 40.9vh);
 }
 .buttons{
     display: flex;
     gap:calc(0.6vw + 0.8vh); ;
 }
 .message-and-input{
-    max-height: calc(20vw + 32.6vh);
     height: calc(20vw + 32.6vh);
+    /* display: flex;
+    justify-content: space-between;
+    align-items: center; */
 }
 .button{
     all: unset;
@@ -39,25 +40,31 @@
     padding:  calc(0.5vw + 0.6vh) calc(0.3vw + 0.5vh);
     color: rgba(129, 129, 141, 1);
 }
-#messages{
+
+.messages-class{
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
     gap: calc(0.3vw + 0.5vh);
     max-height: calc(17.2vw + 32.6vh);
     height: calc(17.2vw + 32.6vh);
-    overflow-y:auto;
-    justify-content: flex-end;
-    align-items: flex-end;
-    
+    min-height: 0px;
+    min-height: auto;
+    overflow-y: scroll;
+    padding-top: calc(0.3vw + 0.5vh);
+    padding-bottom: calc(0.3vw + 0.5vh);
 }
-p{
+
+.one-message{
+    display: flex;
+    flex-direction: column;
     padding: calc(0.3vw + 0.5vh);
     background-color: rgba(205, 206, 210, 1);
     width: min-content;
     border-radius: calc(0.2vw + 0.3vh);
     max-width: calc(18.5vw + 26vh);
-    overflow-wrap: break-word;
 }
+
 .chat-hat{
     display: flex;
     padding-bottom: calc(0.3vw + 0.5vh);
