--- a/social_network/chats/static/css/all_chats/style.css
+++ b/social_network/chats/static/css/all_chats/style.css
@@ -240,3 +240,89 @@ body{
     width: calc(1.5vw + 2.4vh);
     height: calc(1.5vw + 2.4vh);
 }
+.hidden{
+    visibility: hidden;
+    display: none;
+}
+.cross-image:hover{
+    cursor: pointer;
+}
+.fullscreen{
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    background-color: rgba(102, 102, 102, 0.4);
+    position: fixed;
+}
+
+.members-group{
+    width: calc(15vw + 17.2vh);
+    height: calc(11vw + 15vh);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: calc(0.3vw + 0.5vh);
+}
+.member{
+    display: flex;
+    gap: calc(0.4vw + 0.6vh);
+    align-items: center;
+}
+.name-and-delete{
+    display: flex;
+    align-items: center;
+}
+.people-name{
+    width: calc(11.25vw + 15.9vh);
+}
+.button_style{
+    width: calc(17vw + 18vh);
+    height: calc(2.7vw + 4vh);
+    display: flex;
+    justify-content: flex-end;
+    gap: calc(0.5vw + 0.7vh);
+
+}
+.add-avatar{
+    display: flex;
+}
+.title-choose{
+    font-size: calc(0.6vw + 0.8vh);
+    color: rgba(84, 60, 82, 1);
+}
+.avatar-group{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: calc(0.8vw + 1.2vh);
+}
+.button_down{
+    color: #543C52;
+    font-family: "GT Walsheim Pro";
+    font-size: calc(0.5vw + 0.8vh);
+    border: calc(0.06vw + 0.09vh) solid #543C52;
+    border-radius: 1234px;
+    width: calc(3vw + 4vh);
+    height: calc(1.3vw + 1.9vh);
+    
+   
+}
+.button_right{
+    color: #FFFFFF;
+    font-family: "GT Walsheim Pro";
+    font-size: calc(0.5vw + 0.8vh);
+    background-color: #543C52;
+    border-radius: 1234px;
+    width: calc(4.7vw + 6.6vh);
+    height: calc(1.3vw + 1.9vh);
+    font-weight: 100% ;
+    border: calc(0.03vw + 0.05vh) black solid;
+} 
+
+
+
+.member{
+    display: flex;
+    width: calc(12.2vw + 17.2vh);
+}
