--- a/social_network/chats/static/css/chat/chat.css
+++ b/social_network/chats/static/css/chat/chat.css
@@ -100,3 +100,161 @@
     font-weight: 400;
     font-size: calc(0.5vw + 0.8vh);
 }
+.modal-create-group{
+    width: calc(17vw + 24vh);
+    height: calc(25vw + 37.5vh);
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    position: fixed;
+    left: 50%;
+    top: 50%;
+    align-items: center;
+    border: calc(0.03vw + 0.05vh)rgba(205, 206, 210, 1) solid;
+    transform: translate(-50%, -50%);
+    padding: calc(0.8vw + 1.2vh) calc(1.5vw + 2.2vh) calc(1.5vw + 2.2vh) calc(1.5vw + 2.2vh);
+    border-radius: calc(0.7vw + 1vh);
+    gap:calc(0.8vw + 1.2vh);
+}
+.frame-cross{
+    display: flex;
+    width: calc(14vw + 19.7vh);
+    justify-content: flex-end;
+}
+.cross-image{
+    width: calc(0.7vw + 1vh);
+}
+.title-new-group{
+    font-size: calc(1.2vw + 1.7vh);
+}
+.input-modal-create{
+    display: flex;
+    flex-direction: column;
+}
+.filter-people-group{
+    max-height: calc(13vw + 22vh);
+    height: calc(13vw + 22vh);
+    overflow-y: scroll;
+}
+.input-create-group{
+    width: calc(14vw + 19.7vh);
+    height: calc(1.5vw + 2.1vh);
+    border: calc(0.03vw + 0.05vh) rgba(205, 206, 210, 1) solid;
+    border-radius: calc(0.3vw + 0.5vh);
+    padding: calc(0.3vw + 0.5vh) calc(1.3vw + 1.8vh);
+    color: rgba(129, 129, 141, 1);
+}
+.image-search{
+    width: calc(0.7vw + 1vh);
+    height: calc(0.7vw + 1vh);
+    position: absolute;
+    margin-left: calc(0.5vw + 0.8vh);
+    margin-top: calc(0.4vw + 0.5vh);
+}
+.selected-people{
+    font-size: calc(0.5vw + 0.8vh);
+    color: rgba(129, 129, 141, 1);
+    font-weight: 500;
+    width: calc(14vw + 19.7vh);
+}
+.profile-card{
+    display: flex;
+    align-items: center;
+    width: calc(14vw + 19.7vh); 
+    padding: calc(0.3vw + 0.4vh) calc(0.5vw + 0.8vh);
+    gap: calc(0.4vw + 0.6vh);
+    border-top: calc(0.03vw + 0.05vh) rgba(226, 224, 232, 1) solid;
+    border-bottom: calc(0.03vw + 0.05vh) rgba(226, 224, 232, 1) solid;
+}
+.name-and-correct{
+    display: flex;
+    justify-content: space-between;
+    width: calc(10.8vw + 15.3vh);
+}
+input[type="checkbox"] {
+    accent-color: rgba(84, 60, 82, 1);
+    appearance: none;
+    -webkit-appearance: none;
+    width: calc(0.5vw + 0.7vh);
+    height: calc(0.5vw + 0.7vh);
+    border: calc(0.07vw + 0.09vh) solid rgba(84, 60, 82, 1);
+    border-radius: calc(0.1vw + 0.19vh);
+}
+
+
+input[type="checkbox"]:checked::after {
+    content: '';
+    display: block;
+    width: calc(0.1vw + 0.2vh);
+    height: calc(0.3vw + 0.3vh);
+    border:  solid rgba(84, 60, 82, 1);
+    border-width: 0px calc(0.05vw + 0.17vh) calc(0.05vw + 0.17vh) 0px;
+    transform: rotate(45deg);
+    margin: auto auto;
+}
+.buttons-create-group{
+    width: calc(14vw + 19.7vh);
+    display: flex;
+    justify-content: flex-end;
+    gap: calc(0.5vw + 0.8vh);
+}
+.cancel-create-group{
+    width: calc(3.5vw + 5vh);
+    height: calc(1.4vw + 2vh);
+    border: calc(0.03vw + 0.05vh) rgba(84, 60, 82, 1) solid;
+    background-color: white;
+    border-radius:1234px;
+    font-size: calc(0.5vw + 0.8vh);
+    color: rgba(84, 60, 82, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.confirm-create-group{
+    width: calc(2.1vw + 3vh);
+    height: calc(1.4vw + 2vh);
+    background-color: rgba(84, 60, 82, 1);
+    border-radius:1234px;
+    font-size: calc(0.5vw + 0.8vh);
+    border: none;
+    color: white;
+}
+.modal-set-name{
+    width: calc(17vw + 24vh);
+    height: calc(22vw + 31.1vh);
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    left: 50%;
+    top: 50%;
+    position: fixed;
+    align-items: center;
+    border: calc(0.03vw + 0.05vh)rgba(205, 206, 210, 1) solid;
+    transform: translate(-50%, -50%);
+    padding: calc(0.8vw + 1.2vh) calc(1.5vw + 2.2vh) calc(1.5vw + 2.2vh) calc(1.5vw + 2.2vh);
+    border-radius: calc(0.7vw + 1vh);
+    gap:calc(0.8vw + 1.2vh);
+}
+.label-name{
+    font-weight: 400;
+    font-size: calc(0.5vw + 0.8vh);
+}
+.input-create-group::placeholder{
+    font-size: calc(0.6vw + 0.8vh);
+}
+.group-image{
+    width: calc(1.6vw + 2.6vh);
+}
+.add-avatar-button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.image-choose{
+    margin-top: calc(0.06vw + 0.03vh);
+}
+.image-20px{
+    width: calc(0.5vw + 0.8vh);
+    height:calc(0.5vw + 0.8vh);
+
+}
